1. Add new web interface for "InfoSme Deliveries" role 2. Big InfoSme refactoring